Performed some refractoring